# bott

./: Cargo.toml  Makefile  README.md  rustfmt.toml  shell.nix
src/: bot.rs  errbox.rs  gd.rs  gui.rs  hooks.rs  lib.rs
src/gui/: mod.rs
src/gui/pages/: debug.rs  mod.rs  record.rs  replay.rs
src/gui/panels/: debug.rs  load.rs  mod.rs  save.rs  settings.rs
