[package]
name = "rbot"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "^1.0.0"
egui = "^0.21.0"
egui_logger = "^0.3.0"
egui-opengl-internal = { git = "https://github.com/unknowntrojan/egui-opengl-internal.git" }
log = "^0.4.0"
retour = "^0.1.0"

[dependencies.windows]
version = "^0.44.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_OpenGL",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]
