[package]
name = "rbot"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "^1.0.0"
egui = "^0.25.0"
egui-opengl-internal = { git = "https://github.com/Cubesicle/egui-opengl-internal" }
egui_logger = "^0.4.0"
lazy_static = "^1.4.0"
log = "^0.4.0"
pretty_env_logger = "^0.5.0"
retour = { version = "^0.3.0", features = ["static-detour"] }

[dependencies.windows]
version = "^0.52.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_OpenGL",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]
