[package]
name = "bott"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
csv = "1.3"
egui = "0.26"
egui-opengl-internal = { git = "https://github.com/Cubesicle/egui-opengl-internal" }
egui_logger = "0.4"
indexmap = "2.2"
log = "0.4"
once_cell = "1.19"
retour = { version = "0.3", features = ["static-detour", "thiscall-abi"] }
serde = { version = "1", features = ["derive"] }

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_OpenGL",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]
